--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                                             <i class='bx bxs-star' ></i>
                                         </div>
                                         <h4 class="section-3-sub-2-product">
-                                            <a href="../product/meizu-m6-note-blue/product.html">Meizu M6 Note Blue</a>
+                                            <a href="product/meizu-m6-note-blue/product.html">Meizu M6 Note Blue</a>
                                         </h4>
                                         <h4 class="section-3-sub-2-coin">
                                             $350.00
@@ -273,7 +273,7 @@
                                             <i class='bx bxs-star' ></i>
                                         </div>
                                         <h4 class="section-3-sub-2-product">
-                                            <a href="../product/dell-xps-13-9310/product.html">Dell XPS 13 9310</a> 
+                                            <a href="product/dell-xps-13-9310/product.html">Dell XPS 13 9310</a> 
                                         </h4>
                                         <h4 class="section-3-sub-2-coin">
                                             $2000.00
@@ -301,7 +301,7 @@
                                             <i class='bx bxs-star' ></i>
                                         </div>
                                         <h4 class="section-3-sub-2-product">
-                                            <a href="../product/samsung-gear-blue/product.html">Samsung Gear Blue</a>
+                                            <a href="product/samsung-gear-blue/product.html">Samsung Gear Blue</a>
                                         </h4>
                                         <h4 class="section-3-sub-2-coin">
                                             $20.00
@@ -348,7 +348,7 @@
                                 <div class="section-4-content-sub">
                                     <a class="section-4-items-info" href="#">Cell Phones</a>
                                     <h3 class="section-4-items-name">
-                                        <a href="/product/xiaomi-mi-mix-2/product.html">Xiaomi Mi Mix 2</a>
+                                        <a href="product/xiaomi-mi-mix-2/product.html">Xiaomi Mi Mix 2</a>
                                     </h3>
                                     <h3 class="section-4-items-coin">
                                         $55.00
@@ -469,7 +469,7 @@
                                     <i class='bx bxs-star' ></i>
                                 </div>
                                 <h2 class="section-5-product-name">
-                                    <a href="../product/polaroid-cube/product.html">Polaroid Cube+</a>
+                                    <a href="product/polaroid-cube/product.html">Polaroid Cube+</a>
                                 </h2>
                                 <h4 class="section-3-sub-2-coin">
                                     $168.00
@@ -502,7 +502,7 @@
                                 <div class="section-4-content-sub">
                                     <a class="section-4-items-info" href="#">Apple Watches</a>
                                     <h3 class="section-4-items-name">
-                                        <a href="../product/apple-watch-series-6/product.html">Apple Watch Series 6 </a>
+                                        <a href="product/apple-watch-series-6/product.html">Apple Watch Series 6 </a>
                                     </h3>
                                     <h3 class="section-4-items-coin">
                                         $565.00
