--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                             <div class="mr-l14-r14">
                                 <div class="section-3-sub-2-items">
                                     <div class="sale-btn">Sale!</div>
-                                    <img src="./assets/img/section-3/section-3-sub-2/1-3-540x540.jpg" alt="">
+                                    <img src="assets/img/section-3/section-3-sub-2/1-3-540x540.jpg" alt="">
                                     <div class="section-3-sub-2-content">
                                         <div class="star">
                                             <i class='bx bxs-star' ></i>
@@ -263,7 +263,7 @@
                             <div class="mr-l14-r14">
                                 <div class="section-3-sub-2-items">
                                     <div class="sale-btn">Sale!</div>
-                                    <img src="./assets/img/section-3/section-3-sub-2/2b_48afc0ac492d42dc83a39dc4ec0f941f_grande.jpg" alt="">
+                                    <img src="assets/img/section-3/section-3-sub-2/2b_48afc0ac492d42dc83a39dc4ec0f941f_grande.jpg" alt="">
                                     <div class="section-3-sub-2-content">
                                         <div class="star">
                                             <i class='bx bxs-star' ></i>
@@ -291,7 +291,7 @@
                             <div class="mr-l14-r14">
                                 <div class="section-3-sub-2-items">
                                     <div class="sale-btn">Sale!</div>
-                                    <img src="./assets/img/section-3/section-3-sub-2/4-540x540.jpg" alt="">
+                                    <img src="assets/img/section-3/section-3-sub-2/4-540x540.jpg" alt="">
                                     <div class="section-3-sub-2-content">
                                         <div class="star">
                                             <i class='bx bxs-star' ></i>
@@ -344,7 +344,7 @@
                     <div class="section-4-content">
                         <div class="col-40  padding-l14-r14">
                             <div class="section-4-items">
-                                <img src="./assets/img/section-4/6-540x540.jpg" alt="">
+                                <img src="assets/img/section-4/6-540x540.jpg" alt="">
                                 <div class="section-4-content-sub">
                                     <a class="section-4-items-info" href="#">Cell Phones</a>
                                     <h3 class="section-4-items-name">
@@ -396,7 +396,7 @@
                         </div>
                         <div class="col-40 padding-l14-r14">
                             <div class="section-4-items">
-                                <img src="./assets/img/section-4/razer_blade_pro_2919_17.jpg" alt="">
+                                <img src="assets/img/section-4/razer_blade_pro_2919_17.jpg" alt="">
                                 <div class="section-4-content-sub">
                                     <a class="section-4-items-info" href="#">Laptop</a>
                                     <h3 class="section-4-items-name">
@@ -423,7 +423,7 @@
                         <div class="col-40 padding-l14-r14">
                             <div class="section-4-items">
                                 <div class="sale-btn">Sale!</div>
-                                <img src="./assets/img/section-4/techzones-msi-katana-gf66-the-he-intel-11-3.png" alt="">
+                                <img src="assets/img/section-4/techzones-msi-katana-gf66-the-he-intel-11-3.png" alt="">
                                 <div class="section-4-content-sub">
                                     <a class="section-4-items-info" href="#">Laptop</a>
                                     <h3 class="section-4-items-name">
@@ -459,7 +459,7 @@
                         </div>
                         <div class="section-5-sub-content">
                             <div class="sale-btn">Sale!</div>
-                            <img src="./assets/img/section-5/9-3.jpg" alt="">
+                            <img src="assets/img/section-5/9-3.jpg" alt="">
                             <div class="section-5-sub-content-right">
                                 <div class="star">
                                     <i class='bx bxs-star' ></i>
@@ -498,7 +498,7 @@
                     <div class="section-4-content">
                         <div class="col-40  padding-l14-r14">
                             <div class="section-4-items">
-                                <img src="./assets/img/section-6/apple-watch-s6-blue-aluminum-deep-navy-sport-band-41-700x700.jpg" alt="">
+                                <img src="assets/img/section-6/apple-watch-s6-blue-aluminum-deep-navy-sport-band-41-700x700.jpg" alt="">
                                 <div class="section-4-content-sub">
                                     <a class="section-4-items-info" href="#">Apple Watches</a>
                                     <h3 class="section-4-items-name">
@@ -524,7 +524,7 @@
                         </div>
                         <div class="col-40  padding-l14-r14">
                             <div class="section-4-items">
-                                <img src="./assets/img/section-6/10-540x540.jpg" alt="">
+                                <img src="assets/img/section-6/10-540x540.jpg" alt="">
                                 <div class="section-4-content-sub">
                                     <a class="section-4-items-info" href="#">Smart Watches</a>
                                     <h3 class="section-4-items-name">
@@ -550,7 +550,7 @@
                         </div>
                         <div class="col-40 padding-l14-r14">
                             <div class="section-4-items">
-                                <img src="./assets/img/section-6/12-3-540x540.jpg" alt="">
+                                <img src="assets/img/section-6/12-3-540x540.jpg" alt="">
                                 <div class="section-4-content-sub">
                                     <a class="section-4-items-info" href="#">Apple Macbook</a>
                                     <h3 class="section-4-items-name">
@@ -576,7 +576,7 @@
                         </div>
                         <div class="col-40 padding-l14-r14">
                             <div class="section-4-items">
-                                <img src="./assets/img/section-6/13-3-540x540.jpg" alt="">
+                                <img src="assets/img/section-6/13-3-540x540.jpg" alt="">
                                 <div class="section-4-content-sub">
                                     <a class="section-4-items-info" href="#">Apple Macbook</a>
                                     <h3 class="section-4-items-name">
@@ -612,7 +612,7 @@
                     <div class="section-7-sub ">
                         <div class="owl-carousel">
                             <div class="section-7-items col-30 padding-l14-r14">
-                                <img src="./assets/img/section-7/blog5-2-580x366.jpg" alt="">
+                                <img src="assets/img/section-7/blog5-2-580x366.jpg" alt="">
                                 <div class="section-7-items-content">
                                     <div class="section-7-items-description">
                                         <a href="#">Hi-Tech</a>
@@ -625,7 +625,7 @@
                                 </div>
                             </div>
                             <div class="section-7-items col-30 padding-l14-r14">
-                                <img src="./assets/img/section-7/blog4-2-580x366.jpg" alt="">
+                                <img src="assets/img/section-7/blog4-2-580x366.jpg" alt="">
                                 <div class="section-7-items-content">
                                     <div class="section-7-items-description">
                                         <a href="#">Business</a>
@@ -638,7 +638,7 @@
                                 </div>
                             </div>
                             <div class="section-7-items col-30 padding-l14-r14">
-                                <img src="./assets/img/section-7/blog6-2-580x366.jpg" alt="">
+                                <img src="assets/img/section-7/blog6-2-580x366.jpg" alt="">
                                 <div class="section-7-items-content">
                                     <div class="section-7-items-description">
                                         <a href="#">Business</a>
@@ -651,7 +651,7 @@
                                 </div>
                             </div>
                             <div class="section-7-items col-30 padding-l14-r14">
-                                <img style="height: 190px;" src="./assets/img/section-7/hong200921-16321295219991160686305.jpg" alt="">
+                                <img style="height: 190px;" src="assets/img/section-7/hong200921-16321295219991160686305.jpg" alt="">
                                 <div class="section-7-items-content">
                                     <div class="section-7-items-description">
                                         <a href="#">Hi-Tech</a>
