--- a/product/apple-watch-series-6/product.html
+++ b/product/apple-watch-series-6/product.html
@@ -153,7 +153,7 @@
         <div class="container max-width-1000">
             <div class="section-1-2">
                 <div class="section-1 col-42">
-                    <img src="assets/img/section-6/apple-watch-s6-blue-aluminum-deep-navy-sport-band-41-700x700.jpg" alt="">
+                    <img src="../assets/img/section-6/apple-watch-s6-blue-aluminum-deep-navy-sport-band-41-700x700.jpg" alt="">
                 </div>
                 <div class="section-2 col-58 padding-l40-r40">
                     <div class="section-2-product-name">
